# ProtoRunnerV2

./: import-summary.txt  local.properties  settings.gradle
ProtoRunnerV2/: CMakeLists.txt  build.gradle
ProtoRunnerV2/src/main/: AndroidManifest.xml
ProtoRunnerV2/src/main/cpp/: CRenderer.cpp
ProtoRunnerV2/src/main/cpp/OpenGL/: GLRenderer.cpp  GLRenderer.h
ProtoRunnerV2/src/main/cpp/OpenGL/FrameBufferEffects/: FrameBufferContainer.cpp  FrameBufferContainer.h  Model_ScreenQuad.cpp  Model_ScreenQuad.h
ProtoRunnerV2/src/main/cpp/OpenGL/Models/: Model_Vehicle.cpp  Model_Vehicle.h
ProtoRunnerV2/src/main/cpp/OpenGL/Shaders/: Shader_Basic.h  Shader_BasicUI.h  Shader_ScreenQuad.h  Shader_Wireframe.h
ProtoRunnerV2/src/main/cpp/OpenGL/UI/: GLModel_UIBlock.cpp  GLModel_UIBlock.h  UIRenderer.cpp  UIRenderer.h
ProtoRunnerV2/src/main/java/com/raggamuffin/protorunnerv2/ObjectEffect/: ObjectEffect.java  ObjectEffectController.java  ObjectEffectType.java  ObjectEffect_DamageMarker.java  ObjectEffect_HealthBar.java  ObjectEffect_Shields.java  ObjectEffect_SpawnPillar.java
ProtoRunnerV2/src/main/res/values/: HeagonTube.xml  Laser.xml  PlaneXY.xml  Plasma.xml  Quad.xml  RadarFragment.xml  SpawnPillar.xml  ThreePointStar.xml  UIQuad_Centered.xml  UIQuad_LeftAligned.xml  UIQuad_RightAligned.xml  bit.xml  box.xml  byte.xml  carrier.xml  colors.xml  dome.xml  dummy.xml  enginedrone.xml  explosion.xml  mine.xml  missile.xml  octahedron.xml  runner.xml  shield.xml  shieldbearer.xml  spear.xml  strings.xml  weapondrone.xml
gradle/wrapper/: gradle-wrapper.properties
(+542 files in other folders)
